Added and fixed mobile design
Added mobile design for the /new page and fixed the overflow in mobile devices, which was caused by the cool background.

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ html {
   color: white;
   scroll-padding-top: 90px;
   font-size: 17px;
+  overflow-x: hidden;
 }
 
 body {
@@ -45,6 +46,11 @@ body {
     display: flex;
     gap: 30px;
     max-width: fit-content;
+  }
+
+  .submit-wrp {
+    display: flex;
+    justify-content: right;
   }
 
   .title {
@@ -256,6 +262,7 @@ body {
 
   main {
     margin-bottom: 120px;
+    overflow-x: hidden;
     min-height: 100vh;
   }
 
@@ -404,6 +411,7 @@ body {
     display: none
   }
 
+
   .hidden {
     opacity: 0;
     filter: blur(12px);
@@ -540,11 +548,11 @@ body {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    height: 100vh;
+    min-height: 100svh;
     flex-direction: column;
   }
 
-  header:not(header:has(.login-form)) {
+  header:not(header:has(.login-form), header:has(.post-form)) {
     padding-top: 95px;
   }
 
@@ -565,6 +573,7 @@ body {
 
   main {
     min-height: 100vh;
+    overflow-x: hidden;
   }
 
   .header-side {
@@ -581,6 +590,7 @@ body {
     font-size: 1rem;
     color: #ffffffd4;
     text-align: center;
+    margin-bottom: 20px;
     width: 100%;
     font-weight: 700;
   }
@@ -711,15 +721,86 @@ body {
     border-radius: 12px;
   }
 
-  .post-form {
-    border-radius: 30px;
-    padding: 30px;
-    z-index: 12;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
-    position: relative;
-    max-width: 90%;
+  .titles {
     display: flex;
     flex-direction: column;
+    gap: 30px;
+    max-width: fit-content;
+  }
+
+  .title {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    max-width: fit-content;
+  }
+
+  .text-title {
+    display: flex;
+    gap: 4px;
+    flex-direction: column;
+  }
+
+  .text-title textarea {
+    min-height: 100px;
+  }
+
+  .links {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .post-form label {
+    max-width: fit-content;
+  }
+
+  .new {
+    min-height: 100%;
+    width: 100%;
+  }
+
+  .post-form {
+    border-radius: 30px;
+    padding: 20px;
+    box-sizing: border-box;
+    margin: 10px auto;
+    position: relative;
+    z-index: 12;
+    gap: 30px;
+    border: 1px rgba(255, 255, 255, 0.14) solid;
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    flex-wrap: wrap;
+  }
+
+  .post-form input,
+  .post-form textarea,
+  .post-form button {
+    border-radius: 14px;
+    background: transparent;
+    backdrop-filter: blur(20px);
+    padding: 10px 20px;
+    font-size: 1rem;
+    outline: none;
+    max-width: 90%;
+    border: 1px rgba(255, 255, 255, 0.14) solid;
+    color: white;
+    transition: .3s;
+  }
+
+  .post-form button {
+    max-width: 70%;
+  }
+
+  .post-form button {
+    cursor: pointer;
+  }
+
+  .submit-wrp {
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -1109,6 +1190,9 @@ header.error {
   transform: translate(-50%, -50%);
   filter: blur(35px);
   z-index: -1;
+  max-width: 100%;
+  min-width: 10px;
+  overflow: hidden;
 }
 
 .background-element {
@@ -1259,9 +1343,4 @@ input:focus::placeholder {
 
 .socel-container:nth-child(4) {
   background: radial-gradient(#FF5C5C, var(--mainBG));
-}
-
-.submit-wrp {
-  display: flex;
-  justify-content: right;
 }
