--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,16 @@
   padding: 0;
 }
 
+.admin-textarea::-webkit-scrollbar {
+  background: rgba(255, 255, 255, 0.418);
+  border-radius: 8px;
+  width: 4px;
+}
+
+.admin-textarea::-webkit-scrollbar-corner {
+  display: none;
+}
+
 ::-webkit-scrollbar {
   background: rgba(255, 255, 255, 0.418);
   border-radius: 8px;
@@ -151,7 +161,7 @@ body {
   .hidden {
     opacity: 0;
     filter: blur(12px);
-    transform: translateX(-80%);
+    transform: translateX(-30%);
     transition: all .8s;
   }
 
@@ -379,11 +389,8 @@ body {
     width: 900px;
     box-sizing: border-box;
     padding: 30px;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
-    border-radius: 18px;
     display: flex;
     justify-content: space-between;
-    margin-block: 30px;
   }
 
   .project:nth-child(even) {
@@ -553,7 +560,7 @@ body {
     flex-direction: column;
   }
 
-  header:not(header:has(.login-form), header:has(.post-form)) {
+  header:not(.error, header:has(.login-form), header:has(.post-form)) {
     padding-top: 95px;
   }
 
@@ -707,12 +714,9 @@ body {
     width: 95%;
     box-sizing: border-box;
     padding: 10px;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
-    border-radius: 18px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-block: 30px;
   }
 
   .langs-tech a {
@@ -1156,7 +1160,7 @@ main:not(.projects) {
 }
 
 header.error {
-  min-height: 100vh;
+  min-height: 100svh;
   width: 100%;
   display: flex;
   align-content: center;
@@ -1386,4 +1390,71 @@ input:focus::placeholder {
 
 .post-form textarea {
   resize: vertical;
+}
+
+main.admin {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 95px;
+}
+
+.admin .delete-btn {
+  border: none;
+  background: red;
+  transition: .3s;
+  padding: 10px 20px;
+  border-radius: 9px;
+  cursor: pointer;
+  color: white;
+  font-weight: 700;
+}
+
+.admin .delete-btn:hover {
+  background: rgb(255, 62, 62);
+  transform: translateY(-3px);
+}
+
+.admin .delete-btn-wrp {
+  display: flex;
+  justify-content: right;
+  margin: 0 30px 30px 30px;
+}
+
+.project:not(.admin .project) {
+  margin-block: 30px;
+  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border-radius: 18px;
+}
+
+.admin-post-wrp {
+  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border-radius: 18px;
+}
+
+.admin-text {
+  background: transparent;
+  outline: none;
+  border: none;
+  color: rgba(255, 255, 255, 0.801);
+}
+
+.admin-text:focus {
+  color: white;
+}
+
+.admin .admin-textarea {
+  min-height: 17ch;
+  font-size: 1rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.admin .project-side {
+  gap: 30px;
+}
+
+.admin .admin-heading {
+  font-size: 1rem;
+  font-weight: 700;
+  display: grid;
 }
