Added a link copy functionality for the /projects
And cleaned my project structure a little.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 :root {
   --mainBG: rgb(20, 20, 26);
+  --secBG: rgb(24, 24, 31);
   --mainBGNum: 20, 20, 26;
   --accent: #807AD6;
   --accent2: #5F9EC7;
   --accent2_hover: #00FFFF;
   --accent_hover: #5C6AFF;
+  --border-main: rgba(255, 255, 255, 0.14);
 }
 
 * {
@@ -48,10 +50,15 @@ html {
 
 body {
   background: var(--mainBG);
+  max-width: 100vw;
   overflow-x: hidden;
 }
 
 @media (min-width: 1000px) {
+  .popup {
+    width: 700px;
+  }
+
   .titles {
     display: flex;
     gap: 30px;
@@ -101,7 +108,7 @@ body {
     position: relative;
     z-index: 12;
     gap: 20px;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
+    border: 1px var(--border-main) solid;
     margin: 10px;
     display: flex;
     flex-direction: column;
@@ -119,7 +126,7 @@ body {
     font-size: 1rem;
     outline: none;
     max-width: 90%;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
+    border: 1px var(--border-main) solid;
     color: white;
     transition: .3s;
   }
@@ -172,7 +179,7 @@ body {
     position: fixed;
     background: rgba(20, 20, 26, 0.534);
     backdrop-filter: blur(12px);
-    border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
+    border-bottom: 1px var(--border-main) solid;
     display: flex;
     justify-content: space-between;
     z-index: 999;
@@ -333,7 +340,7 @@ body {
     animation: socel-scroll cubic-bezier(1, 0.37, 0.58, 1) both;
     animation-timeline: view();
     animation-range: entry 20% cover 30%;
-    background: rgb(24, 24, 31);
+    background: var(--secBG);
     border-radius: inherit;
     width: 337px;
     margin: 1px;
@@ -361,7 +368,7 @@ body {
     align-items: center;
     grid-template-columns: 70px 80px auto;
     gap: 30px;
-    background: rgb(24, 24, 31);
+    background: var(--secBG);
     z-index: 8;
   }
 
@@ -403,6 +410,10 @@ body {
 }
 
 @media (max-width: 999px) {
+  .popup {
+    width: 90%;
+  }
+
   .socials-element p {
     color: rgba(255, 255, 255, 0.836);
     transition: .3s;
@@ -434,7 +445,7 @@ body {
     position: fixed;
     background: rgba(20, 20, 26, 0.534);
     backdrop-filter: blur(12px);
-    border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
+    border-bottom: 1px var(--border-main) solid;
     display: flex;
     justify-content: space-evenly;
     z-index: 999;
@@ -506,7 +517,7 @@ body {
     padding-block: 12px;
     font-weight: 700;
     font-size: 1rem;
-    border-bottom: 1px rgba(255, 255, 255, 0.14) solid;
+    border-bottom: 1px var(--border-main) solid;
   }
 
   .expanded a:last-child {
@@ -653,7 +664,7 @@ body {
     box-sizing: border-box;
     padding: 9px;
     border-radius: inherit;
-    background: rgb(24, 24, 31);
+    background: var(--secBG);
     margin: 1px;
     color: white;
   }
@@ -676,7 +687,7 @@ body {
     padding: 20px;
     margin: 1px;
     border-radius: 18px;
-    background: rgb(24, 24, 31);
+    background: var(--secBG);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -773,7 +784,7 @@ body {
     position: relative;
     z-index: 12;
     gap: 30px;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
+    border: 1px var(--border-main) solid;
     display: flex;
     flex-direction: column;
     width: 95%;
@@ -791,7 +802,7 @@ body {
     font-size: 1rem;
     outline: none;
     max-width: 90%;
-    border: 1px rgba(255, 255, 255, 0.14) solid;
+    border: 1px var(--border-main) solid;
     color: white;
     transition: .3s;
   }
@@ -1067,6 +1078,7 @@ main.projects>h1 {
 .project-links {
   display: flex;
   gap: 20px;
+  z-index: -1;
 }
 
 .project-links a {
@@ -1156,7 +1168,7 @@ main>* {
 }
 
 main:not(.projects) {
-  border-top: 1px rgba(255, 255, 255, 0.14) solid;
+  border-top: 1px var(--border-main) solid;
 }
 
 header.error {
@@ -1273,7 +1285,7 @@ header.error {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border: 1px var(--border-main) solid;
   border-radius: 18px;
   gap: 30px;
   max-width: 70%;
@@ -1292,7 +1304,7 @@ header.error {
 .login-form button {
   color: white;
   font-size: 1rem;
-  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border: 1px var(--border-main) solid;
   transition: .3s;
 }
 
@@ -1423,12 +1435,12 @@ main.admin {
 
 .project:not(.admin .project) {
   margin-block: 30px;
-  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border: 1px var(--border-main) solid;
   border-radius: 18px;
 }
 
 .admin-post-wrp {
-  border: 1px rgba(255, 255, 255, 0.14) solid;
+  border: 1px var(--border-main) solid;
   border-radius: 18px;
 }
 
@@ -1457,4 +1469,95 @@ main.admin {
   font-size: 1rem;
   font-weight: 700;
   display: grid;
+}
+
+.project-bottom-wrp {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.three-dots-btn {
+  width: 20px;
+  height: 20px;
+  padding: 7px;
+  box-sizing: content-box;
+  border-radius: 50%;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.three-dots-btn:hover {
+  background: var(--border-main);
+}
+
+.three-dots-btn:active,
+.three-dots-btn:focus {
+  transition: none;
+  background: rgba(255, 255, 255, 0.568);
+}
+
+.three-dots-btn .popover {
+  display: none;
+}
+
+.three-dots-btn:focus .popover {
+  display: block;
+}
+
+.three-dots-vertical {
+  max-height: 20px;
+  width: auto;
+}
+
+.popover {
+  position: absolute;
+  padding: 5px 0;
+  background: transparent;
+  backdrop-filter: blur(5px);
+  border: 1px var(--border-main) solid;
+  border-radius: 18px;
+  overflow: hidden;
+  transform: translate(-90%, -17%);
+  cursor: default;
+  animation: show-it .15s forwards;
+}
+
+@keyframes show-it {
+  from {
+    opacity: 0;
+    transform: scaleY(0) translate(-90%, -17%);
+  }
+
+  to {
+    opacity: 1;
+    transform: scaleY(1) translate(-90%, -17%);
+  }
+}
+
+.popover .popover-link {
+  color: rgba(255, 255, 255, 0.747);
+  text-decoration: none;
+  transition: .3s;
+  padding: 9px 30px;
+  border: none;
+  background: transparent;
+  font-size: .9rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+  min-width: 120px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.popover .popover-link:hover {
+  background: rgba(255, 255, 255, 0.175);
+}
+
+.popover .popover-icon {
+  max-height: 22px;
+  width: auto;
 }
