--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 
 * {
   margin: 0;
+  box-sizing: border-box;
   padding: 0;
 }
 
@@ -163,13 +164,12 @@ body {
 
   .hidden {
     opacity: 0;
-    filter: blur(12px);
-    transform: translateX(-30%);
+    filter: blur(7px);
+    transform: translateX(-20%);
     transition: all .8s;
   }
 
   nav {
-    box-sizing: border-box;
     width: 100%;
     padding: 20px 50px;
     position: fixed;
@@ -258,7 +258,6 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-sizing: border-box;
     padding-inline: 180px;
     min-height: 100vh;
   }
@@ -305,8 +304,7 @@ body {
     justify-content: center;
   }
 
-  section:not(.langs-section) {
-    box-sizing: border-box;
+  section:not(.langs-section, .go-to-section) {
     padding: 50px 20%;
     width: 100%;
   }
@@ -347,12 +345,6 @@ body {
     max-height: 50px;
     min-height: 50px;
     width: auto;
-    user-select: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
   }
 
   .langs-section {
@@ -360,7 +352,6 @@ body {
     margin: 1px;
     border-radius: 18px;
     display: grid;
-    box-sizing: border-box;
     align-items: center;
     grid-template-columns: 70px 80px auto;
     gap: 30px;
@@ -375,7 +366,7 @@ body {
   }
 
   footer {
-    box-sizing: border-box;
+
     padding: 60px 80px;
     background: rgb(20, 20, 20);
     border-top: 1px rgba(255, 255, 255, 0.154) solid;
@@ -390,7 +381,7 @@ body {
 
   .project {
     width: 900px;
-    box-sizing: border-box;
+
     padding: 30px;
     display: flex;
     justify-content: space-between;
@@ -402,6 +393,28 @@ body {
 
   .menu-line {
     display: none;
+  }
+
+  .go-to-section {
+    padding: 20px;
+    margin: 1px;
+    border-radius: 18px;
+    display: flex;
+
+    flex-direction: column;
+    gap: 30px;
+    background: var(--secBG);
+    z-index: 8;
+  }
+
+  .go-to-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .go-to-icons img {
+    width: auto;
   }
 }
 
@@ -425,13 +438,13 @@ body {
 
   .hidden {
     opacity: 0;
-    filter: blur(12px);
-    transform: translateX(-80%);
+    filter: blur(7px);
+    transform: translateX(-30%);
     transition: all .6s;
   }
 
   nav:not(.expanded) {
-    box-sizing: border-box;
+
     width: 100%;
     padding-block: 20px;
     position: fixed;
@@ -558,7 +571,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-sizing: border-box;
+
     min-height: 100svh;
     flex-direction: column;
   }
@@ -614,8 +627,8 @@ body {
     flex-wrap: wrap;
   }
 
-  section:not(.langs-section) {
-    box-sizing: border-box;
+  section:not(.langs-section, .go-to-section) {
+
     padding: 50px 15px;
     width: 100%;
   }
@@ -653,7 +666,7 @@ body {
     animation-timeline: view();
     animation-range: entry 20% cover 30%;
     align-items: center;
-    box-sizing: border-box;
+
     padding: 9px;
     border-radius: inherit;
     background: var(--secBG);
@@ -666,12 +679,6 @@ body {
     max-width: 45px;
     height: auto;
     max-height: 45px;
-    user-select: none;
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
   }
 
   .langs-section {
@@ -685,7 +692,7 @@ body {
     justify-content: center;
     flex-direction: column;
     gap: 20px;
-    box-sizing: border-box;
+
     padding-inline: 5px;
   }
 
@@ -698,7 +705,7 @@ body {
   }
 
   footer {
-    box-sizing: border-box;
+
     padding: 60px 10px;
     background: rgb(20, 20, 20);
     border-top: 1px rgba(255, 255, 255, 0.154) solid;
@@ -715,7 +722,7 @@ body {
 
   .project {
     width: 95%;
-    box-sizing: border-box;
+
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -771,7 +778,7 @@ body {
   .post-form {
     border-radius: 30px;
     padding: 20px;
-    box-sizing: border-box;
+
     margin: 10px auto;
     position: relative;
     z-index: 12;
@@ -811,19 +818,37 @@ body {
     display: flex;
     justify-content: center;
   }
+
+  .go-to-section {
+    width: 100%;
+    padding: 20px 20px;
+
+    margin: 1px;
+    border-radius: 18px;
+    background: var(--secBG);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 20px;
+
+    padding-inline: 5px;
+    text-align: center;
+  }
+
+  .go-to-top {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .go-to-icons img {
+    width: auto;
+  }
 }
 
 .logo-text:hover {
   filter: contrast(20);
-}
-
-.langs-tech img {
-  user-select: none;
-  -webkit-user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
 }
 
 .langs-tech a:hover {
@@ -911,12 +936,6 @@ a.colored-text:hover {
 .langs-section img {
   max-height: 30px;
   width: auto;
-  user-select: none;
-  -webkit-user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
 }
 
 .sarcasm {
@@ -1381,7 +1400,7 @@ input:focus::placeholder {
 
 .post-form select {
   width: fit-content;
-  box-sizing: border-box;
+
   min-width: 100%;
   color: grey;
 }
@@ -1565,4 +1584,55 @@ main.admin {
   #contact h2 {
     text-align: center;
   }
+}
+
+.go-to-section {
+  margin-block: 20px;
+  transition: .4s;
+  padding-inline: 20px;
+  box-shadow: 0 7px 15px rgba(0, 0, 0, 0.599);
+  border: 1px var(--border-main) solid;
+}
+
+.go-to-icons img {
+  max-height: 40px;
+}
+
+.go-to-icons {
+  display: flex;
+  gap: 13px;
+  justify-content: center;
+}
+
+.no-select {
+  user-select: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+section p {
+  color: rgba(255, 255, 255, 0.849);
+}
+
+.appwrite {
+  color: #F02E65;
+}
+
+.sass {
+  color: #CD6799;
+}
+
+.firebase {
+  color: #FFA513;
+}
+
+.react {
+  color: #00D8FF;
+}
+
+.electron {
+  color: #9FEAF9;
 }
