--- a/src/App.css
+++ b/src/App.css
@@ -429,6 +429,118 @@ body {
   .signout-btn:hover img {
     filter: invert(0%);
   }
+
+  .logo-text:hover {
+    filter: contrast(20);
+  }
+
+  .langs-tech a:hover {
+    transform: translateY(-6px) scale(1.05);
+  }
+
+  .langs-tech a[href="#html-css"]:hover {
+    box-shadow: 0 6px 6px #E14E1D;
+    background: #E14E1D;
+  }
+
+  .langs-tech a[href="#html-css"]:nth-child(2):hover {
+    box-shadow: 0 6px 6px #0277BD;
+    background: #0277BD;
+  }
+
+  .langs-tech a[href="#js"]:hover {
+    box-shadow: 0 6px 6px #F0DB4F;
+    background: #F0DB4F;
+  }
+
+  .langs-tech a[href="#ts"]:hover {
+    box-shadow: 0 6px 6px #007ACC;
+    background: #007ACC;
+  }
+
+  .langs-tech a[href="#react"]:hover {
+    box-shadow: 0 6px 6px #00D8FF;
+    background: #00D8FF;
+  }
+
+  .langs-tech a[href="#sveltekit"]:hover {
+    box-shadow: 0 6px 6px #FF3E00;
+    background: #FF3E00;
+  }
+
+  .langs-tech a[href="#git"]:hover {
+    box-shadow: 0 6px 6px #F03C2E;
+    background: #F03C2E;
+  }
+
+  .langs-tech a[href="#py"]:hover {
+    box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
+    background: #346E9E;
+  }
+
+  .langs-tech a[href="#firebase"]:hover {
+    box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
+    background: #FFA513;
+  }
+
+  .langs-tech a[href="#supabase"]:hover {
+    box-shadow: 0 6px 6px #249361;
+    background: #249361;
+  }
+
+  .langs-tech a[href="#appwrite"]:hover {
+    box-shadow: 0 6px 6px #F02E65;
+    background: #F02E65;
+  }
+
+  p a:hover {
+    color: var(--accent2_hover);
+  }
+
+  .socials-element p:hover {
+    color: white;
+  }
+
+  a.colored-text:hover {
+    filter: contrast(20);
+  }
+
+  .project-links a:hover img {
+    filter: invert(0%);
+  }
+
+  .error-wrp a:hover {
+    color: white;
+  }
+
+  .socel-container:nth-child(1):hover {
+    box-shadow: 0 1px 4px #4285F4;
+  }
+
+  .socel-container:nth-child(2):hover {
+    box-shadow: 0 1px 4px white;
+  }
+
+  .socel-container:nth-child(3):hover {
+    box-shadow: 0 1px 4px #B8457E;
+  }
+
+  .socel-container:nth-child(4):hover {
+    box-shadow: 0 1px 4px #FF5C5C;
+  }
+
+  .admin .delete-btn:hover {
+    background: rgb(255, 62, 62);
+    transform: translateY(-3px);
+  }
+
+  .three-dots-btn:hover {
+    background: var(--border-main);
+  }
+
+  .popover .popover-link:hover {
+    background: rgba(255, 255, 255, 0.175);
+  }
 }
 
 @media (max-width: 999px) {
@@ -508,9 +620,9 @@ body {
     transition: .3s;
   }
 
-  nav button:hover,
-  .expanded-top button:not(.signout-btn):hover {
-    transform: scale(1.1);
+  nav button:active,
+  .expanded-top button:not(.signout-btn):active {
+    transform: scale(.8);
   }
 
   .menu {
@@ -522,7 +634,7 @@ body {
   }
 
   .expanded a {
-    color: rgba(255, 255, 255, 0.832);
+    color: rgba(255, 255, 255, 0.945);
     text-decoration: none;
     transition: .3s;
     margin-inline: auto;
@@ -541,8 +653,9 @@ body {
     display: grid;
   }
 
-  nav a:hover {
+  nav a:active {
     color: white;
+    transform: scale(.9);
   }
 
   nav img {
@@ -671,7 +784,6 @@ body {
     animation-timeline: view();
     animation-range: entry 20% cover 30%;
     align-items: center;
-
     padding: 9px;
     border-radius: inherit;
     background: var(--secBG);
@@ -710,7 +822,6 @@ body {
   }
 
   footer {
-
     padding: 60px 10px;
     background: rgb(20, 20, 20);
     border-top: 1px rgba(255, 255, 255, 0.154) solid;
@@ -727,7 +838,6 @@ body {
 
   .project {
     width: 95%;
-
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -859,8 +969,8 @@ body {
     max-width: 95%;
   }
 
-  .signout-btn:hover img:hover {
-    transform: scale(1.1);
+  .signout-btn:active img:active {
+    transform: scale(.9);
   }
 
   .nav-side {
@@ -873,69 +983,118 @@ body {
   .nav-menu-button {
     height: fit-content;
   }
-}
 
-.logo-text:hover {
-  filter: contrast(20);
-}
+  .logo-text:active {
+    filter: contrast(20);
+  }
 
-.langs-tech a:hover {
-  transform: translateY(-6px) scale(1.05);
-}
+  .langs-tech a:active {
+    transform: translateY(-6px) scale(1.05);
+  }
 
-.langs-tech a[href="#html-css"]:hover {
-  box-shadow: 0 6px 6px #E14E1D;
-  background: #E14E1D;
-}
+  .langs-tech a[href="#html-css"]:active {
+    box-shadow: 0 6px 6px #E14E1D;
+    background: #E14E1D;
+  }
 
-.langs-tech a[href="#html-css"]:nth-child(2):hover {
-  box-shadow: 0 6px 6px #0277BD;
-  background: #0277BD;
-}
+  .langs-tech a[href="#html-css"]:nth-child(2):active {
+    box-shadow: 0 6px 6px #0277BD;
+    background: #0277BD;
+  }
 
-.langs-tech a[href="#js"]:hover {
-  box-shadow: 0 6px 6px #F0DB4F;
-  background: #F0DB4F;
-}
+  .langs-tech a[href="#js"]:active {
+    box-shadow: 0 6px 6px #F0DB4F;
+    background: #F0DB4F;
+  }
 
-.langs-tech a[href="#ts"]:hover {
-  box-shadow: 0 6px 6px #007ACC;
-  background: #007ACC;
-}
+  .langs-tech a[href="#ts"]:active {
+    box-shadow: 0 6px 6px #007ACC;
+    background: #007ACC;
+  }
 
-.langs-tech a[href="#react"]:hover {
-  box-shadow: 0 6px 6px #00D8FF;
-  background: #00D8FF;
-}
+  .langs-tech a[href="#react"]:active {
+    box-shadow: 0 6px 6px #00D8FF;
+    background: #00D8FF;
+  }
 
-.langs-tech a[href="#sveltekit"]:hover {
-  box-shadow: 0 6px 6px #FF3E00;
-  background: #FF3E00;
-}
+  .langs-tech a[href="#sveltekit"]:active {
+    box-shadow: 0 6px 6px #FF3E00;
+    background: #FF3E00;
+  }
 
-.langs-tech a[href="#git"]:hover {
-  box-shadow: 0 6px 6px #F03C2E;
-  background: #F03C2E;
-}
+  .langs-tech a[href="#git"]:active {
+    box-shadow: 0 6px 6px #F03C2E;
+    background: #F03C2E;
+  }
 
-.langs-tech a[href="#py"]:hover {
-  box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
-  background: #346E9E;
-}
+  .langs-tech a[href="#py"]:active {
+    box-shadow: 0 3px 3px #346E9E, 0 6px 6px #FFD242;
+    background: #346E9E;
+  }
 
-.langs-tech a[href="#firebase"]:hover {
-  box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
-  background: #FFA513;
-}
+  .langs-tech a[href="#firebase"]:active {
+    box-shadow: 0 2px 2px #FFA513, 0 4px 4px #F4830F, 0 6px 6px #FFCB2E;
+    background: #FFA513;
+  }
 
-.langs-tech a[href="#supabase"]:hover {
-  box-shadow: 0 6px 6px #249361;
-  background: #249361;
-}
+  .langs-tech a[href="#supabase"]:active {
+    box-shadow: 0 6px 6px #249361;
+    background: #249361;
+  }
 
-.langs-tech a[href="#appwrite"]:hover {
-  box-shadow: 0 6px 6px #F02E65;
-  background: #F02E65;
+  .langs-tech a[href="#appwrite"]:active {
+    box-shadow: 0 6px 6px #F02E65;
+    background: #F02E65;
+  }
+
+  p a:active {
+    color: var(--accent2_hover);
+  }
+
+  .socials-element p:active {
+    color: white;
+  }
+
+  a.colored-text:active {
+    filter: contrast(20);
+  }
+
+  .project-links a:active img {
+    filter: invert(0%);
+  }
+
+  .error-wrp a:active {
+    color: white;
+  }
+
+  .socel-container:nth-child(1):active {
+    box-shadow: 0 1px 4px #4285F4;
+  }
+
+  .socel-container:nth-child(2):active {
+    box-shadow: 0 1px 4px white;
+  }
+
+  .socel-container:nth-child(3):active {
+    box-shadow: 0 1px 4px #B8457E;
+  }
+
+  .socel-container:nth-child(4):active {
+    box-shadow: 0 1px 4px #FF5C5C;
+  }
+
+  .admin .delete-btn:active {
+    background: rgb(255, 62, 62);
+    transform: translateY(-3px);
+  }
+
+  .three-dots-btn:active {
+    background: var(--border-main);
+  }
+
+  .popover .popover-link:active {
+    background: rgba(255, 255, 255, 0.175);
+  }
 }
 
 p a {
@@ -945,10 +1104,6 @@ p a {
   transition: .3s;
 }
 
-p a:hover {
-  color: var(--accent2_hover);
-}
-
 .colored-text {
   background-clip: text;
   background: -webkit-linear-gradient(40deg, var(--accent), var(--accent2));
@@ -956,14 +1111,6 @@ p a:hover {
   max-width: fit-content;
   -webkit-text-fill-color: transparent;
   font-weight: 700;
-}
-
-.socials-element p:hover {
-  color: white;
-}
-
-a.colored-text:hover {
-  filter: contrast(20);
 }
 
 .langs-section img {
@@ -1133,10 +1280,6 @@ main.projects>h1 {
   display: grid;
 }
 
-.project-links a:hover img {
-  filter: invert(0%);
-}
-
 .project-links a img {
   max-height: 30px;
   width: auto;
@@ -1250,10 +1393,6 @@ header.error {
   font-size: 1.4rem;
   text-decoration: none;
   transition: .3s;
-}
-
-.error-wrp a:hover {
-  color: white;
 }
 
 .bg-wrp {
@@ -1410,32 +1549,17 @@ input:focus::placeholder {
   background: radial-gradient(#4285F4, var(--mainBG));
 }
 
-.socel-container:nth-child(1):hover {
-  box-shadow: 0 1px 4px #4285F4;
-}
 
 .socel-container:nth-child(2) {
   background: radial-gradient(white, var(--mainBG));
-}
-
-.socel-container:nth-child(2):hover {
-  box-shadow: 0 1px 4px white;
 }
 
 .socel-container:nth-child(3) {
   background: radial-gradient(#B8457E, var(--mainBG));
 }
 
-.socel-container:nth-child(3):hover {
-  box-shadow: 0 1px 4px #B8457E;
-}
-
 .socel-container:nth-child(4) {
   background: radial-gradient(#FF5C5C, var(--mainBG));
-}
-
-.socel-container:nth-child(4):hover {
-  box-shadow: 0 1px 4px #FF5C5C;
 }
 
 .post-form select {
@@ -1470,11 +1594,6 @@ main.admin {
   cursor: pointer;
   color: white;
   font-weight: 700;
-}
-
-.admin .delete-btn:hover {
-  background: rgb(255, 62, 62);
-  transform: translateY(-3px);
 }
 
 .admin .delete-btn-wrp {
@@ -1539,10 +1658,6 @@ main.admin {
   transition: .3s;
 }
 
-.three-dots-btn:hover {
-  background: var(--border-main);
-}
-
 .three-dots-btn:active,
 .three-dots-btn:focus {
   transition: none;
@@ -1601,10 +1716,6 @@ main.admin {
   box-sizing: content-box;
 }
 
-.popover .popover-link:hover {
-  background: rgba(255, 255, 255, 0.175);
-}
-
 .popover .popover-icon {
   max-height: 22px;
   width: auto;
@@ -1644,6 +1755,10 @@ main.admin {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+}
+
+img.no-select {
+  pointer-events: none;
 }
 
 section p {
