--- a/src/App.css
+++ b/src/App.css
@@ -543,6 +543,10 @@ body {
     opacity: 1;
     transform: scale(1.3);
   }
+
+  .outline-btn:hover {
+    border-color: white;
+  }
 }
 
 @media (max-width: 999px) {
@@ -1102,6 +1106,11 @@ body {
   .three-dots-btn:focus::before {
     opacity: 1;
     transform: scale(1.3);
+  }
+
+  .outline-btn:active {
+    transform: scale(.9);
+    border-color: white;
   }
 
   * {
@@ -1811,11 +1820,16 @@ section p {
   width: 100%;
 }
 
-.signout-btn {
-  display: grid;
+.outline-btn {
+  border-radius: 14px;
   background: transparent;
-  border: none;
+  padding: 10px 20px;
+  max-width: 90%;
+  border: 1px var(--border-main) solid;
+  color: white;
   cursor: pointer;
+  transition: .15s;
+  font-size: 1rem;
 }
 
 .signout-btn img {
