--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   --accent2: #5F9EC7;
   --accent2_hover: #00FFFF;
   --accent_hover: #5C6AFF;
+  --accent2-alpha: rgba(60, 96, 120, 0.5);
   --border-main: rgba(255, 255, 255, 0.14);
 }
 
@@ -164,9 +165,9 @@ body {
 
   .hidden {
     opacity: 0;
-    filter: blur(7px);
+    filter: blur(3px);
     transform: translateX(-20%);
-    transition: all .8s;
+    transition: all .6s;
   }
 
   nav {
@@ -263,9 +264,7 @@ body {
   }
 
   header h1 {
-    margin-left: -10px;
     font-size: 3rem;
-    margin-bottom: 30px;
   }
 
   .header-about {
@@ -281,10 +280,6 @@ body {
 
   .header-side {
     max-width: 370px;
-  }
-
-  .header-side>* {
-    margin-inline: auto;
   }
 
   .langs-tech-above {
@@ -539,6 +534,11 @@ body {
     max-height: 27px;
     width: auto;
   }
+
+  .primary-btn-wrp:hover .primary-btn {
+    box-shadow: -6px 6px 7px var(--accent2-alpha);
+    transform: translate(1px, -1px);
+  }
 }
 
 @media (max-width: 999px) {
@@ -561,9 +561,9 @@ body {
 
   .hidden {
     opacity: 0;
-    filter: blur(7px);
+    filter: blur(3px);
     transform: translateX(-30%);
-    transition: all .6s;
+    transition: all .4s;
   }
 
   nav:not(.expanded) {
@@ -700,7 +700,6 @@ body {
 
   header h1 {
     font-size: 2.5rem;
-    margin-bottom: 15px;
   }
 
   header *:not(header::before, header::after) {
@@ -732,13 +731,13 @@ body {
     font-size: 1rem;
     color: #ffffffd4;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 14px;
     width: 100%;
     font-weight: 700;
   }
 
   .langs-tech {
-    margin-top: 15px;
+    margin-top: 20px;
     max-width: 204px;
     display: flex;
     justify-content: center;
@@ -1093,6 +1092,11 @@ body {
   .langs-section img {
     max-height: 30px;
     width: auto;
+  }
+
+  .primary-btn-wrp:hover .primary-btn {
+    box-shadow: 0 5px 7px var(--accent2-alpha);
+    transform: translateY(-1px);
   }
 
   * {
@@ -1867,4 +1871,35 @@ section p {
   display: flex;
   gap: 7px;
   align-items: center;
+}
+
+.primary-btn-wrp {
+  display: flex;
+  max-width: fit-content;
+}
+
+.primary-btn {
+  text-decoration: none;
+  color: white;
+  font-size: 1rem;
+  padding: 10px 14px;
+  border-radius: 14px;
+  background: linear-gradient(27deg, var(--accent), var(--accent2));
+  max-width: fit-content;
+  transition: .2s;
+  font-weight: 500;
+}
+
+.span-move-btn span {
+  transition: .3s;
+}
+
+div .span-move-btn:hover span {
+  margin-left: 7px;
+}
+
+.header-left {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
 }
